testsuite/vhdl/syntax/test_data/keyword_mismatch/000_process.expected
In 'keyword_mismatch/000_process':11:3: syntax error: ill-formed statement in Process Statement; (Hint: single trailing keyword 'postponed')
  11|   Stimulus: process -- no starting 'postponed'
    |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ <<-- here
